# Infrared

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  ChangeLog.md  Makefile  Makefile.am  README.md  TODO  assignment.hpp  bayes_net_hairpin.cPickle  cluster.hpp  cluster_tree.hpp  configure.ac  constraint_network.hpp  docIpynbFilter.sh  docMdFilter.sh  docPyFilter.sh  functions.hpp  gitlab-ci.yml  infrared-alignment-tutorial.ipynb  infrared-rnadesign-tutorial.ipynb  infrared.cpp  infrared.hpp  infrared.py  infrared_module.py  pybind11.cmake  redprint.py  redprint_complexity.py  redprint_lib.py  rna.py  rna_support.py  rnadesign.hpp  sample.cpp  sample.hpp  setup.py  td_complexity.py  test.inp  test_infrared.cpp  test_infrared.py  (+2 more)
Doc/: Bookchapter Tutorial.ipynb  Bookchapter Tutorial.py  DoxygenLayout.xml  Network-parsimony.ipynb  RNA Design Tutorial.ipynb  RNA Design Tutorial.py  RelatedWorks.md  RelativeWorks.md  Snakefile  alignment-example.ipynb  alignment-tutorial.ipynb  automata.ipynb  bookchapter-tutorial.ipynb  bookchapter.ipynb  doxygen.cfg  exampleCard.html  exampleLst.yml  genExampleLst.py  header.html  multitarget-rnadesign-example.ipynb  parsimony-example.ipynb  rnadesign-example.ipynb  rnadesign-tutorial.ipynb  rnadesign-tutorial.py  style.css
Test/: Makefile  test_assignment.cpp
conda-recipe/: meta.yaml
docs/: Alignment.md  Automata.md  Bookchapter.md  GraphColoring.md  MultiDimensionalBoltzmannSampling.md  MultitargetRNADesign.md  RNA Design.md  annotated.html  annotated_dup.js  assignment_8hpp_source.html  classinfrared_1_1infrared_1_1ArcticClusterTree__inherit__graph.map  classinfrared_1_1infrared_1_1ArcticEvaluationAlgebra-members.html  classinfrared_1_1infrared_1_1ArcticEvaluationAlgebra.html  classinfrared_1_1infrared_1_1ArcticEvaluationAlgebra__inherit__graph.map  classinfrared_1_1infrared_1_1ArcticFunctionAdapter.html  classinfrared_1_1infrared_1_1ArcticFunctionAdapter.js  classinfrared_1_1infrared_1_1ArcticOptimizer.html  classinfrared_1_1infrared_1_1ArcticOptimizer__inherit__graph.md5  classinfrared_1_1infrared_1_1BoltzmannSampler-members.html  classinfrared_1_1infrared_1_1ClusterTreeBase-members.html  classinfrared_1_1infrared_1_1ClusterTreeBase__inherit__graph.md5  classinfrared_1_1infrared_1_1ConsistencyError-members.html  classinfrared_1_1infrared_1_1ConstraintFunctionDefinitionError-members.html  classinfrared_1_1infrared_1_1ConstraintFunctionDefinitionError.html  classinfrared_1_1infrared_1_1ConstraintFunctionDefinitionError.js  classinfrared_1_1infrared_1_1ConstraintFunctionDefinitionError__inherit__graph.md5  classinfrared_1_1infrared_1_1EngineBase-members.html  classinfrared_1_1infrared_1_1EngineBase.js  classinfrared_1_1infrared_1_1EngineBase__coll__graph.map  classinfrared_1_1infrared_1_1EngineBase__inherit__graph.map  classinfrared_1_1infrared_1_1EvaluationAlgebra-members.html  classinfrared_1_1infrared_1_1EvaluationAlgebra__coll__graph.map  classinfrared_1_1infrared_1_1EvaluationAlgebra__inherit__graph.md5  classinfrared_1_1infrared_1_1Feature.html  classinfrared_1_1infrared_1_1FeatureStatistics-members.html  classinfrared_1_1infrared_1_1FeatureStatistics.html  classinfrared_1_1infrared_1_1Model-members.html  classinfrared_1_1infrared_1_1Model.js  classinfrared_1_1infrared_1_1MultiDimensionalBoltzmannSampler.html  classinfrared_1_1infrared_1_1MultiDimensionalBoltzmannSampler.js  (+184 more)
public/: Alignment.ipynb  Automata.ipynb  Bookchapter.ipynb  GraphColoring.ipynb  MultiDimensionalBoltzmannSampling.ipynb  MultitargetRNADesign.ipynb  NetworkParsimony.ipynb  NetworkParsimony.md  RNA Design.ipynb  classes.html  classinfrared_1_1infrared_1_1ArcticClusterTree-members.html  classinfrared_1_1infrared_1_1ArcticClusterTree.html  classinfrared_1_1infrared_1_1ArcticClusterTree.js  classinfrared_1_1infrared_1_1ArcticClusterTree__coll__graph.md5  classinfrared_1_1infrared_1_1ArcticEvaluationAlgebra.js  classinfrared_1_1infrared_1_1ArcticEvaluationAlgebra__inherit__graph.md5  classinfrared_1_1infrared_1_1ArcticFunctionAdapter-members.html  classinfrared_1_1infrared_1_1ArcticFunctionAdapter__coll__graph.map  classinfrared_1_1infrared_1_1ArcticFunctionAdapter__inherit__graph.md5  classinfrared_1_1infrared_1_1ArcticOptimizer-members.html  classinfrared_1_1infrared_1_1ArcticOptimizer.js  classinfrared_1_1infrared_1_1ArcticOptimizer__coll__graph.map  classinfrared_1_1infrared_1_1BoltzmannSampler.html  classinfrared_1_1infrared_1_1BoltzmannSampler.js  classinfrared_1_1infrared_1_1BoltzmannSampler__coll__graph.map  classinfrared_1_1infrared_1_1BoltzmannSampler__coll__graph.md5  classinfrared_1_1infrared_1_1BoltzmannSampler__inherit__graph.map  classinfrared_1_1infrared_1_1BoltzmannSampler__inherit__graph.md5  classinfrared_1_1infrared_1_1ClusterTreeBase.html  classinfrared_1_1infrared_1_1ClusterTreeBase.js  classinfrared_1_1infrared_1_1ClusterTreeBase__inherit__graph.map  classinfrared_1_1infrared_1_1ConsistencyError.html  classinfrared_1_1infrared_1_1ConsistencyError.js  classinfrared_1_1infrared_1_1ConsistencyError__coll__graph.md5  classinfrared_1_1infrared_1_1ConsistencyError__inherit__graph.map  classinfrared_1_1infrared_1_1ConstraintFunctionDefinitionError__inherit__graph.map  classinfrared_1_1infrared_1_1EngineBase.html  classinfrared_1_1infrared_1_1EngineBase__coll__graph.md5  classinfrared_1_1infrared_1_1EngineBase__inherit__graph.md5  classinfrared_1_1infrared_1_1EvaluationAlgebra.html  (+195 more)
src/Infrared/: Makefile.am  assignment.hpp  boost_python_aux.hpp  cluster.hpp  cluster_tree.hpp  constraint_network.hpp  functions.hpp  infrared.py  libhtdwrap.cpp  libinfrared.cpp  rna_support.py  rnadesign.hpp  test_assignment.cpp  treedecomp.py
(+162 files in other folders)
